feat: update to angular 18

--- a/src/app/views/components/header/header.component.html
+++ b/src/app/views/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="w-100 d-flex justify-content-center align-items-center flex-column">
 	<h2>Codelândia</h2>
 	<div class="d-flex justify-content-start align-items-center">
-		<img src="/assets/images/search.svg" width="18" alt="" srcset="">
+		<img src="assets/images/search.svg" width="18" alt="" srcset="">
 		<input type="text" name="" placeholder="Pesquisar no Blog" id="">
 	</div>
 </header>
