--- a/src/app/views/components/articles/articles.component.html
+++ b/src/app/views/components/articles/articles.component.html
@@ -1,3 +1,5 @@
 <main class="d-flex justify-content-center align-items-center flex-column">
-	<app-article *ngFor="let article of articles$ | async" [article]="article"></app-article>
+  @for (article of articles$ | async; track article) {
+    <app-article [article]="article"></app-article>
+  }
 </main>
